--- a/splitemapp-android/res/layout/fragment_home.xml
+++ b/splitemapp-android/res/layout/fragment_home.xml
@@ -148,51 +148,119 @@
 
             <include layout="@layout/line_separator" />
 
-            <TextView
-                android:id="@+id/h_logout_textView"
+            <LinearLayout
+                android:id="@+id/h_manage_contacts_button"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@drawable/selector_recycler_color"
-                android:drawableLeft="@drawable/ic_logout_grey_24dp"
-                android:drawablePadding="10dp"
-                android:drawableStart="@drawable/ic_logout_grey_24dp"
-                android:gravity="center_vertical|start"
-                android:padding="10dp"
-                android:text="@string/h_logout"
-                android:textColor="@color/hard_grey"
-                android:textStyle="bold" />
+                android:orientation="horizontal" >
+
+                <ImageView
+                    android:layout_width="45dp"
+                    android:layout_height="45dp"
+                    android:contentDescription="@string/h_manage_contacts"
+                    android:paddingRight="10dp"
+                    android:paddingEnd="10dp"
+                    android:paddingLeft="10dp"
+                    android:paddingStart="10dp"
+                    android:gravity="center_vertical|start"
+                    android:src="@drawable/ic_contacts_48dp" />
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:gravity="center_vertical|start"
+                    android:text="@string/h_manage_contacts"
+                    android:textColor="@color/hard_grey"
+                    android:textStyle="bold" />
+            </LinearLayout>
 
             <include layout="@layout/line_separator" />
 
-            <TextView
-                android:id="@+id/h_manage_contacts_textView"
+            <LinearLayout
+                android:id="@+id/h_synchronize_button"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@drawable/selector_recycler_color"
-                android:drawableLeft="@drawable/ic_manage_contacts_grey_24dp"
-                android:drawablePadding="10dp"
-                android:drawableStart="@drawable/ic_manage_contacts_grey_24dp"
-                android:gravity="center_vertical|start"
-                android:padding="10dp"
-                android:text="@string/h_manage_contacts"
-                android:textColor="@color/hard_grey"
-                android:textStyle="bold" />
+                android:orientation="horizontal" >
+
+                <ImageView
+                    android:layout_width="45dp"
+                    android:layout_height="45dp"
+                    android:contentDescription="@string/h_synchronize"
+                    android:paddingRight="10dp"
+                    android:paddingEnd="10dp"
+                    android:paddingLeft="10dp"
+                    android:paddingStart="10dp"
+                    android:gravity="center_vertical|start"
+                    android:src="@drawable/ic_synchronize_48dp" />
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:gravity="center_vertical|start"
+                    android:text="@string/h_synchronize"
+                    android:textColor="@color/hard_grey"
+                    android:textStyle="bold" />
+            </LinearLayout>
 
             <include layout="@layout/line_separator" />
 
-            <TextView
-                android:id="@+id/h_synchronize_textView"
+            <LinearLayout
+                android:id="@+id/h_settings_button"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@drawable/selector_recycler_color"
-                android:drawableLeft="@drawable/ic_synchronize_grey_24dp"
-                android:drawablePadding="10dp"
-                android:drawableStart="@drawable/ic_synchronize_grey_24dp"
-                android:gravity="center_vertical|start"
-                android:padding="10dp"
-                android:text="@string/h_synchronize"
-                android:textColor="@color/hard_grey"
-                android:textStyle="bold" />
+                android:orientation="horizontal" >
+
+                <ImageView
+                    android:layout_width="45dp"
+                    android:layout_height="45dp"
+                    android:contentDescription="@string/h_settings"
+                    android:paddingRight="10dp"
+                    android:paddingEnd="10dp"
+                    android:paddingLeft="10dp"
+                    android:paddingStart="10dp"
+                    android:gravity="center_vertical|start"
+                    android:src="@drawable/ic_settings_48dp" />
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:gravity="center_vertical|start"
+                    android:text="@string/h_settings"
+                    android:textColor="@color/hard_grey"
+                    android:textStyle="bold" />
+            </LinearLayout>
+
+            <include layout="@layout/line_separator" />
+
+            <LinearLayout
+                android:id="@+id/h_logout_button"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@drawable/selector_recycler_color"
+                android:orientation="horizontal" >
+
+                <ImageView
+                    android:layout_width="45dp"
+                    android:layout_height="45dp"
+                    android:contentDescription="@string/h_logout"
+                    android:paddingRight="10dp"
+                    android:paddingEnd="10dp"
+                    android:paddingLeft="10dp"
+                    android:paddingStart="10dp"
+                    android:gravity="center_vertical|start"
+                    android:src="@drawable/ic_logout_48dp" />
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:gravity="center_vertical|start"
+                    android:text="@string/h_logout"
+                    android:textColor="@color/hard_grey"
+                    android:textStyle="bold" />
+            </LinearLayout>
 
             <include layout="@layout/line_separator" />
 
