--- a/splitemapp-android/res/layout/list_item_user_expense.xml
+++ b/splitemapp-android/res/layout/list_item_user_expense.xml
@@ -29,7 +29,6 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="5dp"
             android:layout_marginStart="5dp"
-            android:layout_marginTop="5dp"
             android:layout_toEndOf="@id/ue_icon_imageView"
             android:layout_toRightOf="@id/ue_icon_imageView"
             android:text="@string/ue_category_placeholder"
@@ -44,7 +43,7 @@
             android:layout_alignStart="@id/ue_category_textView"
             android:layout_below="@id/ue_category_textView"
             android:text="@string/ue_date_placeholder"
-            android:textColor="@color/grey"
+            android:textColor="@color/hard_grey"
             android:textSize="12sp" />
 
         <View
@@ -59,25 +58,25 @@
             android:id="@+id/ue_dollar_sign_textView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="5dp"
+            android:layout_alignParentTop="true"
             android:layout_toLeftOf="@+id/ue_amount_textView"
             android:layout_toStartOf="@+id/ue_amount_textView"
+            android:layout_marginTop="7dp"
             android:text="@string/ue_currency"
             android:textColor="@color/black"
-            android:textSize="22sp" />
+            android:textSize="18sp" />
 
         <TextView
             android:id="@id/ue_amount_textView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignBaseline="@+id/ue_dollar_sign_textView"
             android:layout_alignParentEnd="true"
             android:layout_alignParentRight="true"
             android:layout_alignParentTop="true"
-            android:padding="5dp"
+            android:padding="7dp"
             android:text="@string/ue_amount_placeholder"
             android:textColor="@color/black"
-            android:textSize="22sp" />
+            android:textSize="18sp" />
     </RelativeLayout>
 
 </android.support.v7.widget.CardView>
