--- a/SplitemApp/app/src/main/res/layout/fragment_expense.xml
+++ b/SplitemApp/app/src/main/res/layout/fragment_expense.xml
@@ -54,14 +54,29 @@
                         android:id="@+id/e_expense_date_textView"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginBottom="10dp"
-                        android:layout_marginTop="10dp"
                         android:drawableEnd="@drawable/ic_greater_sign_48dp"
                         android:drawableRight="@drawable/ic_greater_sign_48dp"
                         android:gravity="center"
                         android:padding="5dp"
                         android:textColor="@color/black"
                         android:textSize="23sp" />
+
+                    <include layout="@layout/line_separator" />
+
+                    <EditText
+                        android:id="@+id/e_expense_note_editText"
+                        android:layout_width="match_parent"
+                        android:layout_height="40dp"
+                        android:gravity="center_vertical"
+                        android:textColor="@color/black"
+                        android:textColorHint="@color/grey"
+                        android:background="@color/transparent"
+                        android:hint="@string/e_notes_hint"
+                        android:drawableLeft="@drawable/ic_money_white_24dp"
+                        android:drawableStart="@drawable/ic_money_white_24dp"
+                        android:inputType="text" />
+
+                    <include layout="@layout/line_separator" />
                 </LinearLayout>
             </LinearLayout>
 
