--- a/SplitemApp/app/src/main/res/layout/list_item_user_expense.xml
+++ b/SplitemApp/app/src/main/res/layout/list_item_user_expense.xml
@@ -67,6 +67,18 @@
                 android:textSize="16sp" />
 
             <TextView
+                android:id="@+id/ue_notes_textView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="5dp"
+                android:layout_marginStart="5dp"
+                android:layout_toEndOf="@id/ue_category_textView"
+                android:layout_toRightOf="@id/ue_category_textView"
+                android:text="@string/ue_notes_placeholder"
+                android:textColor="@color/grey"
+                android:textSize="16sp" />
+
+            <TextView
                 android:id="@+id/ue_date_textView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
