--- a/SplitemApp/app/src/main/res/layout/list_item_project.xml
+++ b/SplitemApp/app/src/main/res/layout/list_item_project.xml
@@ -1,7 +1,7 @@
 <com.daimajia.swipe.SwipeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/h_swipeLayout"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content" xmlns:app="http://schemas.android.com/apk/res/com.splitemapp.android">
+    android:layout_height="wrap_content" xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <!-- A LinearLayout containing the bottom view with actions -->
 
