--- a/SplitemApp/app/src/main/res/layout/list_item_user_expense.xml
+++ b/SplitemApp/app/src/main/res/layout/list_item_user_expense.xml
@@ -1,5 +1,5 @@
 <com.daimajia.swipe.SwipeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res/com.splitemapp.android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/ue_swipeLayout"
     android:layout_width="match_parent"
     android:layout_height="wrap_content" >
