--- a/SplitemApp/app/src/main/res/layout/fragment_project.xml
+++ b/SplitemApp/app/src/main/res/layout/fragment_project.xml
@@ -1,5 +1,6 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:fab="http://schemas.android.com/apk/res-auto"
     style="@style/NoActionBarTheme"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -136,15 +137,18 @@
         android:textColor="@color/hard_grey"
         android:textSize="16sp" />
 
-    <android.support.design.widget.FloatingActionButton
+    <com.github.clans.fab.FloatingActionButton
         android:id="@+id/p_fab"
-        style="@style/MainFAB"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        app:backgroundTint="@color/tfabblue"
+        android:layout_alignParentRight="true"
+        android:layout_gravity="right"
+        android:layout_marginBottom="8dp"
+        android:layout_marginRight="8dp"
         android:src="@drawable/ic_plus_white_36dp"
-        app:borderWidth="0dp"
-        app:elevation="6dp"
-        app:fabSize="normal"
-        app:pressedTranslationZ="12dp" />
+        fab:fab_colorNormal="@color/seablue"
+        fab:fab_colorPressed="@color/blue"
+        fab:fab_colorRipple="@color/grey"/>
 
 </RelativeLayout>
